--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <resources>
         <string name="app_name">The Crazy Lab</string>
         <string name="action_settings">Settings</string>
         <string name="home_item">Inicio</string>
@@ -10,6 +9,10 @@
         <string name="log_out_item">Cerrar Sesión</string>
         <string name="settings_item">Configuración</string>
         <string name="email_navdrawer">jonathan@thecrazylab.com</string>
-        <string name="name_navdrawer">Enrique Diaz</string>
-    </resources>
+        <string name="name_navdrawer">Jonathan Romero</string>
+        <string name="navigation_drawer_open">Test</string>
+        <string name="navigation_drawer_close">Test1</string>
+
+        <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
